tooling/nargo_cli/tests/snapshots/execution_success/regression_8779/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) -> pub bool {
    let d: [&mut bool; 1] = [&mut true];
    *d[x]
}
